[package]
name = "guppies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Random number geration
rand = "0.8"
# Coloring output
colored = "2"

[[bin]]
name = "guppies_basic"
path = "guppies_basic.rs"

[[bin]]
name = "guppies"
path = "guppies.rs"

